plugins {
    id 'java-library'
    id 'jacoco'
}

repositories { mavenCentral() }

dependencies {
        api 'org.bouncycastle:bcprov-jdk15on:1.70'
    api 'org.bouncycastle:bcpkix-jdk15on:1.70'    
    // --- Annotation / logging ---
    implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'ch.qos.logback:logback-classic:1.4.11'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'   // ← JSON helper


    // --- Crypto / hashing helper ---
    implementation 'com.google.guava:guava:33.1.0-jre'

    // --- Test ---
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    // compile with JDK 21 to match the node module
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.named('jacocoTestReport') {
    dependsOn test
}
